# data-platform

./: .env  docker-compose.yml  dockerfile  pyproject.toml
dagster_project/: repository.py
flight_pipeline/: main.py
flight_pipeline/database/: create_table.py  db_connection.py
flight_pipeline/ingestion/: fetch_flights.py
flight_pipeline/utils/: logger.py
