[project]
name = "data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect==0.15.1",
    "dagster==1.12.22",
    "dagster-postgres==0.28.22",
    "dagster-webserver==1.12.22",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]
